fix spacing in nav-links

--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -22,8 +22,10 @@
   &__link {
     font-size: 1.6rem;
     text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 0.3rem;
     color: var(--color);
-    padding: 2rem 1rem;
+    padding: 2rem 1.3rem;
     transition: all 0.38s ease-in-out;
 
     &:hover {
@@ -42,9 +44,10 @@
   &__text {
     font-size: 2.2rem;
     text-transform: uppercase;
+    letter-spacing: 0.25rem;
     color: var(--light);
     font-weight: bold;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.75);
   }
 }
 
